# flash-attention

benchmarks/: benchmark_flash_attention.py
csrc/flash_attn/: fmha_api.cpp
csrc/flash_attn/src/: fmha.h  fmha_fprop_fp16_kernel.sm80.cu  fmha_fprop_kernel_1xN.h  fmha_utils.h
csrc/flash_attn/src/fmha/: gemm.h  gmem_tile.h  kernel_traits.h  mask.h  softmax.h
flash_attn/: flash_attention.py  flash_attn_interface.py
test/: CMakeLists.txt  build.sh  fmha_api.h  fwd.cu  sanity_fwd.cu  sanity_fwd.py  sanity_fwd_ele.cu  test.py  test_fhma.py  test_util.h  test_with_model.py
test/cmake/: cuda.cmake  flags.cmake  generic.cmake  init.cmake  nvidia_gpu.cmake  tensorrt.cmake  third_party.cmake
test/tools/: check.py  check_mask.py  process_log.sh
